# Pogodnik

./: .flaskenv  .gitignore  .woodpecker.yml  Dockerfile  LICENSE.md  PoGoDnIk.py  README.md  README_EN.md  README_RU.md  app.py  conclusion.py  config.json  config.toml  config_example.json  example_config.json  example_config.toml  geocoding.py  open_meteo.py  open_weather.py  pyproject.toml  readme.md  test_db.sqlite3
src/: compas.py  conclusion.py  exceptions.py  geocoding.py  open_meteo.py  open_weather.py  structures.py
src/config_file_parser/: file_parser.py
src/geo/: geocoding.py
src/geo_providers/: geocoding.py
src/output/: app.py  compas.py  conclusion.py
src/output/templates/: index.html
src/weather/: open_meteo.py  open_weather.py  weathercoding.py
src/weather/providers/: base.py  local.py  network.py
templates/: data.html  data_om.html  data_ow.html  exceptions.html  index.html  response.html
tests/: conftest.py
tests/integration/: test_database.py
tests/unit/: constants.py
tests/unit/src/config_file_parser/: test_file_parser.py
tests/unit/src/geo/: test_geocoding.py
tests/unit/src/output/: test_conclusion.py
tests/unit/src/weather/: constants.py  test_weathercoding.py
web/templates/: data_om.html  index.html  response.html
