[tool.poetry]
name = "PoGoDnIk"
version = "0.1.0"
description = ""
authors = ["Idvon <d.suchanow2010@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
mypy = "^1.1.1"
isort = "^5.12.0"
black = "^23.1.0"
types-requests = "^2.28.11"
types-toml = "^0.10.8"
pytest = "^7.2.2"
coverage = "^7.2.2"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.coverage.run]
source = ["src/"]
