[tool.poetry]
name = "PoGoDnIk"
version = "1.0.1"
description = ""
authors = ["Idvon <d.suchanow2010@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
toml = "0.10.2"
requests = "2.29.0"
flask = "2.3.2"
asyncio = "3.4.3"
aiohttp = "3.12.13"
aiofile = "3.9.0"
aiosqlite = "0.21.0"

[tool.poetry.group.dev.dependencies]
mypy = "1.2.0"
isort = "5.12.0"
black = "23.3.0"
types-requests = "2.29.0.0"
types-toml = "0.10.8.6"
pytest = "7.3.1"
coverage = "7.2.5"
pytest-mock = "3.10.0"
freezegun = "1.5.0"
requests-mock = "1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.coverage.run]
source = ["src/"]
